# SystemMonitor

./: .clang-format  .directory  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Doxyfile  README.md  modulewidget.cpp  modulewidget.h  prebuild.sh  system-monitor-gui-distribution.pro  system-monitor-gui.pro
ci-scripts/: build.sh  prebuild.ps1  prebuild.sh  report-documentation-coverage.sh  report-test-coverage.sh
scripts/: build.sh  prebuild.sh  report-documentation-coverage.sh  report-test-coverage.sh
source/: .directory  CMakeLists.txt  DeviceInformation.cpp  DeviceInformation.h  DeviceTabWidget.cpp  DeviceTabWidget.h  DeviceWidget.cpp  DeviceWidget.h  DeviceWidget.ui  OpcuaClient.cpp  OpcuaClient.h  OrderWidget.cpp  OrderWidget.h  SkillListWidget.cpp  SkillListWidget.h  SkillListWidget.ui  dynamiccustomtab.cpp  dynamiccustomtab.h  dynamiccustomtab.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  modulestatetabwidget.cpp  modulestatetabwidget.h  modulestatetabwidget.ui  orderinformation.cpp  orderinformation.h  ordertable.cpp  ordertable.h  ordertable.ui  redisclient.cpp  redisclient.h  skillwidget.cpp  skillwidget.h  skillwidget.ui  smgCommon.h  system-monitor-gui.pro  tabstyle_horizontaltext.cpp  tabstyle_horizontaltext.h
source/adapters/: OpcuaClient.cpp  OpcuaClient.h
source/devices/: IDevice.cpp  IDevice.h  OpcuaDevice.cpp  OpcuaDevice.h
source/devices/skills/: ISkill.h
test/: CMakeLists.txt  DeviceWidgetTest.h  main.cpp
unit_test/: CMakeLists.txt  OrderInformationTest.h  RedisClientTest.h  main.cpp  unit_test.pro
